manifests/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: "urb-dev-typescript-hello-world-ingressroute"
  labels:
    app: "urb-dev-typescript-hello-world"
    owner: "terchris"
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`urb-dev-typescript-hello-world\..+`)
      kind: Rule
      services:
        - name: "urb-dev-typescript-hello-world-service"
          port: 80
